# canvas-collab

./: .gitignore
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: canvas.py
backend/app/core/: config.py
backend/app/models/: pixel.py
backend/app/ws/: events.py
backend/tests/: test_canvas.py  test_events.py  test_main.py
