[project]
name = "canvas-backend"
version = "0.1.0"
description = "Collaborative Canvas backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "pydantic>=2.11.9",
    "redis>=6.4.0",
    "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.31.3",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
